--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
   ],
   "dependencies": {
     "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.9",
-    "iron-icon": "PolymerElements/iron-icon#^1.0.10"
+    "iron-icon": "PolymerElements/iron-icon#^1.0.10",
+    "iron-list": "PolymerElements/iron-list#^1.3.11"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.7"
